March 10, 2024: index.html improvement to mobile styling for graphs and metrics to prevent overlap

--- a/static/styles.css
+++ b/static/styles.css
@@ -379,6 +379,19 @@ td.hidden-history-column, td.hidden-wellness-type-column {
         font-size: 14px;
     }
 
+    /* styling for positioning workout emojis */
+    .workout-emoji-container {
+        font-size: 15px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+
+    /* Activity Stats row cell styles */
+    .activity-stats-row {
+        flex-direction: column;
+    }
+
     .chart-grid {
         display: flex;
         flex-wrap: wrap;
@@ -389,7 +402,7 @@ td.hidden-history-column, td.hidden-wellness-type-column {
         padding: 10px;
         box-sizing: border-box;
         height: 0;
-        padding-bottom: 30%; /* Used to fix formatting of "Falling Asleep" title overlap */
+        padding-bottom: 65%; /* provide spacing between graps to prevent overlap */
     }
 
     .chart-container-right {
@@ -397,6 +410,11 @@ td.hidden-history-column, td.hidden-wellness-type-column {
         padding: 10px;
         box-sizing: border-box;
         height: 0;
-        padding-bottom: 30%; 
+        padding-bottom: 70%; 
+    }
+
+    /* Sleep Stats row cell styles */
+    .sleep-stats-row {
+        flex-direction: column;
     }
 }
